# games101

./: .gitignore
Assignment0/code/: main.cpp
Assignment1/code/: CMakeLists.txt  main.cpp
Assignment2/code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment3/code/: CMakeLists.txt  Shader.cpp  Shader.hpp  Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment5/code/: Renderer.cpp  Scene.hpp  Triangle.hpp  main.cpp
Assignment6/code/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
Assignment7/code/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Triangle.hpp  main.cpp
